[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "pytest-mfd-config"
description = "Pytest Plugin that handles test and topology configs and all their belongings like helper fixtures."
requires-python = ">=3.10, <3.14"
version = "3.24.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers=["Framework :: Pytest"]

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/pytest-mfd-config"
Issues = "https://github.com/intel/pytest-mfd-config/issues"
Changelog = "https://github.com/intel/pytest-mfd-config/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]

[project.entry-points.pytest11]
pytest_mfd_config = "pytest_mfd_config.fixtures"